# Tremarel_Finance

./: .env.sample  .gitignore  .mcp.json  CLAUDE AUTOHUB.md  CLAUDE LOYALTY.md  CLAUDE.md  README.md  meeting_summary_20260224_faroo_legal.html  meeting_summary_20260224_faroo_legal.json  package-lock.json  package.json  playwright-mcp-config.json
Server/: main.py
adws/: README.md  adw_build_iso.py  adw_continuous_improvement_iso.py  adw_document_iso.py  adw_meeting_pipeline_iso.py  adw_patch_iso.py  adw_plan_iso.py  adw_prd_to_prompts_iso.py  adw_prompts_to_issues_iso.py  adw_requirements_pipeline_iso.py  adw_review_iso.py  adw_ship_iso.py  adw_test.py  adw_test_iso.py  adw_test_iso_20.py  adw_transcript_to_prd_iso.py
ai_docs/: ADW_CONTINUOUS_IMPROVEMENT_SCANNER_PLAN.md  DAILY_USE_BY_PERSONA_RESTAURANT_OS.html  DAILY_USE_BY_PERSONA_RESTAURANT_OS.md  DAILY_USE_BY_PERSONA_RESTAURANT_OS_ES.html  Faroo Legal - Platform Discovery & Proof of Concept Scoping (2).html  LANDINGAI_DOCUMENT_EXTRACTION_GUIDE.md  USER_GUIDE_LEGAL_DESK.html  USER_GUIDE_LEGAL_DESK.md  USER_GUIDE_RESTAURANT_OS.html  USER_GUIDE_RESTAURANT_OS.md  finance_tracker_implementation_prompts.md  prd-970a89f7-untitled-implementation-prompts.md  prd-ef2d72c2-untitled-implementation-prompts.md  (+4 more)
app_docs/: agentic_kpis.md  (+76 more)
backend/: main.py  pyproject.toml
backend/src/: __init__.py
backend/src/adapter/: __init__.py
backend/src/adapter/rest/: __init__.py
backend/src/core/: __init__.py
backend/src/interface/: __init__.py
backend/src/repository/: __init__.py
backend/tests/: __init__.py  test_health.py
(+639 files in other folders)
